files modified and created new design

--- a/MobinorWeb/add_dialer.html
+++ b/MobinorWeb/add_dialer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     
 <!-- Mirrored from coderthemes.com/uplon_1.4/horizontal/pages-starter.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Dec 2016 20:42:46 GMT -->
@@ -9,6 +9,8 @@
         <meta name="author" content="Coderthemes">
 
         <!-- App Favicon -->
+    <link href="Content/css/stylesheet.css" rel="stylesheet" />
+    <link href="Content/css/style.css" rel="stylesheet" />
         <link rel="shortcut icon" href="assets/images/favicon.ico">
 
         <!-- App title -->
